--- a/Assets/Scripts/Editor/CustomInspectors/Actor/ActorEditor.uxml
+++ b/Assets/Scripts/Editor/CustomInspectors/Actor/ActorEditor.uxml
@@ -8,5 +8,6 @@
             <uie:PropertyField binding-path="Icon" name="Icon" />
         </ui:VisualElement>
     </ui:VisualElement>
+    <uie:PropertyField binding-path="DefaultAnimation" name="DefaultAnimation" />
     <uie:PropertyField name="Description" binding-path="Description" />
 </ui:UXML>
